# AI-Research-Agent

./: .deployment  README.md  main.py  pyproject.toml  uv.sh
ai_search/: __init__.py  indexer_manager.py
core/: agent.py  openai-agent.py  tool_calling.py
database/: __init__.py  user.py
information/: button.py  dialog.py  expander.py  markdown.py  title.py
models/: azure_openai_model.py  base_model.py  model_selector.py
pages/: 00 📘 사용 가이드.py  01 💫 기술 자료 수집 및 검색 기능.py  02 💫 Chat Model with RAG.py  03 🍀 Document Hub.py
prompt/: system_prompt.py
storage/: azure_blob_storage.py  storage.py
tools/: current_time.py  tool_add.py
tools/mcp/: mcp_client.py  mcp_service.py
